--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Croissants are amazing!</h1>
+    <h1>Contact me on</h1>
 
-    <a href=""></a>
-
-    <a href="/photo.html">Photo Page</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/">Back to homepage</a>
   </body>
 </html>
