--- a/photo.html
+++ b/photo.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Croissants are amazing!</h1>
+    <h1>Here is a photo of a croissant</h1>
+    <img src="/images/Croissant.jpeg" alt="" width="150px" />
 
-    <a href=""></a>
-
-    <a href="/photo.html">Photo Page</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/">Back to Homepage</a>
   </body>
 </html>
