--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <h1>Croissants are amazing!</h1>
 
-    <a href=""></a>
+    <h3>
+      Crescent-shaped breads have been made since the Renaissance, and
+      crescent-shaped cakes possibly since antiquity. Croissants have long been
+      a staple of Austrian, Italian, and French bakeries and pâtisseries. The
+      modern croissant was developed in the early 20th century. In the late
+      1970s, the development of factory-made, frozen, preformed but unbaked
+      dough made them into a fast food that could be freshly baked by unskilled
+      labor. The croissant bakery, notably the La Croissanterie chain, was a
+      French response to American-style fast food, and as of 2008, 30–40% of the
+      croissants sold in French bakeries and patisseries were baked from frozen
+      dough.
+    </h3>
+    <div class="links d-flex justify-content-evenly">
+      <a href="/">Home</a>
 
-    <a href="/photo.html">Photo Page</a>
-    <a href="/contact.html">Contact Me</a>
+      <a href="/photo.html">Photo Page</a>
+      <a href="/contact.html">Contact Me</a>
+    </div>
   </body>
 </html>
