--- a/photo.html
+++ b/photo.html
@@ -15,11 +15,48 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Here is a photo of a croissant</h1>
-    <img src="/images/Croissant.jpeg" alt="" width="200px" class="rounded" />
+    <h1>Here are some photos of croissants</h1>
+    <h3>
+      In case you haven't seen a croissant before, here are some photos of them.
+      Don't they look delicious?!?!!?
+    </h3>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            src="/images/Croissant.jpeg"
+            alt=""
+            width="150px"
+            class="rounded m-3 border"
+            height="100px"
+          />
+        </div>
+
+        <div class="col-sm-4">
+          <img
+            src="/images/croissant2.jpg"
+            alt=""
+            width="150px"
+            class="rounded m-3 border"
+            height="100px"
+          />
+        </div>
+
+        <div class="col-sm-4">
+          <img
+            src="/images/croissant3.jpg"
+            alt=""
+            width="150px"
+            class="rounded m-3 border"
+          />
+        </div>
+      </div>
+    </div>
+
     <div class="d-flex justify-content-evenly">
-      <a href="/">Back to Homepage</a>
-      <a href="/contact.html">Contact me</a>
+      <a href="/"> 🏠 Back to Homepage</a>
+      <a href="/contact.html">📝 Contact me</a>
     </div>
   </body>
 </html>
