--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Contact me on</h1>
+    <h1>📝 Contact me on:</h1>
 
-    <a href="/">Back to homepage</a>
+    <h3>croissants-are-great@hotmail.com</h3>
+    <div class="container d-flex justify-content-evenly">
+      <a href="/">🏠 Back to homepage</a>
+      <a href="/photo.html">🥐 Photo page</a>
+    </div>
   </body>
 </html>
