--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>Croissants are amazing!</h1>
+    <h1>🥐 Croissants are amazing! 🥐</h1>
 
     <h3>
       Crescent-shaped breads have been made since the Renaissance, and
@@ -29,10 +29,10 @@
       dough.
     </h3>
     <div class="links d-flex justify-content-evenly">
-      <a href="/">Home</a>
+      <a href="/">🏠 Home</a>
 
-      <a href="/photo.html">Photo Page</a>
-      <a href="/contact.html">Contact Me</a>
+      <a href="/photo.html">🥐 Photo Page</a>
+      <a href="/contact.html">📝 Contact Me</a>
     </div>
   </body>
 </html>
