Updated contact email

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,15 @@
     <h1>📝 Contact me on:</h1>
 
     <h3>croissants-are-great@hotmail.com</h3>
+
+    <h4 class="text-center">
+      Or click
+      <a
+        href="mailto:croissants-are-great@hotmail.com?&subject=I love croissants!"
+        >HERE</a
+      >
+      to email me...
+    </h4>
     <div class="container d-flex justify-content-evenly">
       <a href="/">🏠 Back to homepage</a>
       <a href="/photo.html">🥐 Photo page</a>
