--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="description"
+      content="Please contact me to learn more about croissants"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>Contact Page - www.croissants.com</title>
   </head>
   <body>
     <h1>📝 Contact me on:</h1>
@@ -24,13 +27,14 @@
       Or click
       <a
         href="mailto:croissants-are-great@hotmail.com?&subject=I love croissants!"
+        title="Email me!"
         >HERE</a
       >
       to email me...
     </h4>
     <div class="container d-flex justify-content-evenly">
-      <a href="/">🏠 Back to homepage</a>
-      <a href="/photo.html">🥐 Photo page</a>
+      <a href="/" title="Go home">🏠 Back to homepage</a>
+      <a href="/photo.html" title="See some photos">🥐 Photo page</a>
     </div>
   </body>
 </html>
