--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <meta
+      name="description"
+      content="Imagine a world without croissants, what a sad place that would be. Enter the site to learn more about wonderful croissants"
+      <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Croissants - www.croissants.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,10 +35,10 @@
       dough.
     </h3>
     <div class="links d-flex justify-content-evenly">
-      <a href="/">🏠 Home</a>
+      <a href="/" title="Go home">🏠 Home</a>
 
-      <a href="/photo.html">🥐 Photo Page</a>
-      <a href="/contact.html">📝 Contact Me</a>
+      <a href="/photo.html" title="See photos">🥐 Photo Page</a>
+      <a href="/contact.html" title="Talk to me!">📝 Contact Me</a>
     </div>
   </body>
 </html>
