--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content=" Some great photos of croissants" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -12,7 +14,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Document</title>
+    <title>What does a croissant look like? - www.croissant.com</title>
   </head>
   <body>
     <h1>Here are some photos of croissants</h1>
@@ -26,7 +28,7 @@
         <div class="col-sm-4">
           <img
             src="/images/Croissant.jpeg"
-            alt=""
+            alt="croissant"
             width="250px"
             height="165px"
             class="rounded m-3 border"
@@ -37,7 +39,7 @@
         <div class="col-sm-4">
           <img
             src="/images/croissant2.jpg"
-            alt=""
+            alt=" croissant"
             width="250px"
             class="rounded m-3 border"
             height="165px"
@@ -47,7 +49,7 @@
         <div class="col-sm-4">
           <img
             src="/images/croissant3.jpg"
-            alt=""
+            alt="croissant"
             width="250px"
             class="rounded m-3 border"
           />
@@ -56,8 +58,8 @@
     </div>
 
     <div class="d-flex justify-content-evenly">
-      <a href="/"> 🏠 Back to Homepage</a>
-      <a href="/contact.html">📝 Contact me</a>
+      <a href="/" title="Go home"> 🏠 Back to Homepage</a>
+      <a href="/contact.html" title="Email me!">📝 Contact me</a>
     </div>
   </body>
 </html>
